# robosimgen

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
cfg/: RobosimConfig.cfg
launch/: robosimgen.launch
rviz/: robosimgen.rviz
scripts/: robosimgen_node.py
templates/robosim_description/: CMakeLists.txt  package.xml
templates/robosim_description/config/: robot.yaml  sensors.yaml
templates/robosim_description/launch/: description.launch
templates/robosim_description/urdf/: robosim.urdf.xacro
templates/robosim_description/urdf/include/: common_macros.xacro  robosim.gazebo.xacro  sensors_macros.xacro
templates/robosim_gazebo/: CMakeLists.txt  package.xml
templates/robosim_gazebo/config/: robosim_controllers.yaml
templates/robosim_gazebo/launch/: empty_world.launch  robosim_robot.launch
