<?xml version="1.0"?>
<package format="2">
  <name>robosimgen</name>
  <version>0.0.0</version>
  <description>The robosimgen package</description>

  <maintainer email="maintainer@todo.todo">maintainer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
