<?xml version="1.0"?>
<package format="2">
  <name>robosim_description</name>
  <version>0.0.0</version>
  <description>The robosim_description package</description>

  <maintainer email="maintainer@@todo.todo">maintainer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>

  </export>
</package>
