<?xml version="1.0"?>
<package format="2">
  <name>@(config.robot_name)_gazebo</name>
  <version>0.0.0</version>
  <description>The @(config.robot_name)_gazebo package</description>

  <maintainer email="maintainer@@todo.todo">maintainer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
